--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -7,6 +7,7 @@ parts:
 - caption: Blog Posts
   chapters:
   # Add new chapters here (recent first)
+  - file: laura_zigutyte/plantseg_custom_model/readme
   - file: mara_lampert/getting_started_with_mambaforge_and_python/readme
   - file: till_korten/devbio-napari_cluster/readme
   - file: till_korten/devbio-napari_cluster_setup/readme
